@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package engine.ai.controller {
      class AiController {
          ~ objects : ArrayList<PhysicsObject>
          + AiController()
          + update()
          + setState()
          + getObjects()
          + getActiveState()
          + getAiPlayer()
          + getPlayer()
          + getAiType()
          - initializeProperStateActions()
      }
    }
  }
  

  package  {
    package engine.ai.controller {
      class AiControllersManager {
          - controllers : ArrayList<AiController>
          - objects : ArrayList<PhysicsObject>
          - map : Rectangle
          + AiControllersManager()
          + addAi()
          + updateAllAi()
          + startAllAi()
      }
    }
  }
  

  AiController o-- AiStates : activeState
  AiController o-- Player : aiPlayer
  AiController o-- Player : player
  AiController o-- AiType : aiType
  AiController o-- AiStateActions : stateActions
  AiController o-- FSMManager : fsmManager
  AiControllersManager o-- Player : player
  AiControllersManager o-- ScoreBoard : scoreboard
  AiControllersManager o-- GameType : gameType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
